removed unused configuration